--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@
     <properties>
 		<jdkLevel>1.6</jdkLevel>
 		<cpji.build.directory>target</cpji.build.directory>
-        <aui.qunit.version>0.20</aui.qunit.version>
+        <atlassian.qunit.version>0.32</atlassian.qunit.version>
         <jira.version>5.0.7</jira.version>
         <jira.compile.version>5.0.7</jira.compile.version>
         <jira.data.version>${jira.version}</jira.data.version>
