JRADEV-16759: respecting add comments and link issues permissions on the remote side and showing an appropriate message + integration tests

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -69,6 +69,8 @@ cpji.copy.attachments=Copy Attachments
 cpji.attachments.will.be.copied=Attachments will be copied.
 cpji.attachments.are.disabled=Destination JIRA has attachments disabled.
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the destination JIRA.
+cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the destination JIRA.
+cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the destination JIRA.
 cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
 cpji.copy.comments=Copy Comments
