JRADEV-16892: detecting maximum attachment size and displaying warning messages

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -66,11 +66,13 @@ cpji.user.name=User name
 cpji.user.full.name=User Full Name
 cpji.advanced=Advanced
 cpji.copy.attachments=Copy Attachments
-cpji.attachments.will.be.copied=Attachments will be copied.
-cpji.attachments.are.disabled=Destination JIRA has attachments disabled.
-cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the destination JIRA.
-cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the destination JIRA.
-cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the destination JIRA.
+cpji.attachments.will.be.copied=Attachments will be copied
+cpji.attachments.are.disabled=Destination JIRA has attachments disabled
+cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the destination JIRA and cannot be copied.
+cpji.some.attachments.are.too.big=Some of attachments exceed maximum attachment size in the destination JIRA and cannot be copied. Other attachments will be copied
+cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the destination JIRA
+cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the destination JIRA
+cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the destination JIRA
 cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
 cpji.copy.comments=Copy Comments
