JRADEV-16893: detecting failed attachment send

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -68,6 +68,7 @@ cpji.advanced=Advanced
 cpji.copy.attachments=Copy Attachments
 cpji.attachments.will.be.copied=Attachments will be copied
 cpji.attachments.are.disabled=Destination JIRA has attachments disabled
+cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
 cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the destination JIRA and cannot be copied.
 cpji.some.attachments.are.too.big=Some of attachments exceed maximum attachment size in the destination JIRA and cannot be copied. Other attachments will be copied
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the destination JIRA
