JRADEV-16333: Checking plugin version

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -54,6 +54,7 @@ cpji.you.need.to.log.in=You need to log in and approve to use following servers:
 cpji.authentication.failed=Authentication failed with:
 cpji.communication.failed=Communication failed with:
 cpji.remote.copying.not.installed=Remote copying of issues is not installed on:
+cpji.unsupported.version=Please update Remote Copy Plugin on:
 cpji.please.contact.admin=There was a problem connecting to one of the servers. Please contact your administrator.
 
 cpji.select.new.issue.type=Select a new issue type
