NONE: cleaning up after fixing tests

--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -137,6 +137,8 @@
                 <version>${amps.version}</version>
                 <extensions>true</extensions>
                 <configuration>
+                    <shutdownTimeout>30000</shutdownTimeout>
+                    <parallel>true</parallel>
 					<extractDependencies>false</extractDependencies>
                     <systemPropertyVariables>
                         <xvfb.enable>${xvfb.enable}</xvfb.enable>
