NONE: fixed property file to represent ' correctly

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -15,16 +15,16 @@ cpji.admin.default.values=These default values will be applied if the remote iss
 cpji.field.validation.ok=This field will be copied across and the field value(s) will be retained.
 cpji.field.validation.field.not.mapped=This field does not exist in the target project and cannot be copied.
 cpji.field.validation.value.not.mapped=Field value(s) for this field could not be mapped to valid values in the target project.
-cpji.field.valiation.permission.missing=The value cannot be copied, because you don't have the permission for this field.
+cpji.field.valiation.permission.missing=The value cannot be copied, because you don''t have the permission for this field.
 cpji.field.validation.field.mandatory.value.not.mapped=This field is mandatory in the target project, but no valid field value has been specified. Specify a valid value for this field to be able to copy the issue.
 cpji.field.validation.field.mandatory.value.not.mapped.using.default=This field is mandatory in the target project, but no valid field value has been specified. The target project will use a default value for this field.
-cpji.field.validation.field.mandatory.permission.missing=This field is mandatory and you don't have the required permission to set the value for this field in the target project.
-cpji.field.validation.field.mandatory.permission.missing.using.default=This field is mandatory and you don't have the required permission to set the value for this field in the target project. The target project will use a default value for this field.
+cpji.field.validation.field.mandatory.permission.missing=This field is mandatory and you don''t have the required permission to set the value for this field in the target project.
+cpji.field.validation.field.mandatory.permission.missing.using.default=This field is mandatory and you don''t have the required permission to set the value for this field in the target project. The target project will use a default value for this field.
 cpji.field.validation.field.mandatory.but.not.supplied=This field is required in the target project and does not exist in the local project.
 cpji.field.validation.field.mandatory.but.not.supplied.using.default=This field is required in the target project and does not exist in the local project. The target project will use a default value for this field.
 cpji.field.names.watchers=Watchers
 cpji.field.names.votes=Voters
-cpji.error.no.permission=You don't have the permission for this operation.
+cpji.error.no.permission=You don''t have the permission for this operation.
 cpji.project.role=Project Role {0}
 cpji.group=Group {0}
 usermapping.username=By user name
@@ -46,7 +46,7 @@ cpji.errors.authentication.failed=Authentication failed. If using Trusted Apps, 
 cpji.errors.oauth.token.invalid=OAuth token invalid.
 cpji.errors.failed.to.retrieve.issue.fields=Failed to retrieve the list of issue fields from the remote JIRA instance.
 cpji.errors.plugin.not.installed=Remote copy plugin is not installed.
-cpji.errors.communication.failed=Remote copy couldn't communicate with remote JIRA instance.
+cpji.errors.communication.failed=Remote copy couldn''t communicate with remote JIRA instance.
 cpji.errors.error.occured.generic=Error occured when remote JIRA instance was processing request.
 cpji.errors.issue.created.with.errors=Created issue ''{0}'', but unfortunately there were some errors.
 
