JRADEV-17782: default clone feature is shown again

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -1,3 +1,5 @@
+cpji.operation.name=Remote Copy
+
 cpji.admin.name=Remote Issue Copy
 cpji.admin.title=Configure Remote Issue Copy
 cpji.admin.successful.saved=You have successfuly saved settings
