JRADEV-17571: displaying subtask issue types when cloning to the same project

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -64,6 +64,7 @@ cpji.select.project=Select project
 cpji.select.issue.type=Select Issue Type
 cpji.confirmation=Confirmation
 cpji.issue.type=Issue Type
+cpji.subtask=Sub-Task
 cpji.remote.user=Remote user
 cpji.user.name=User name
 cpji.user.full.name=User Full Name
