--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -270,6 +270,7 @@
 						</goals>
 					</execution>
 				</executions>
+                <version>2.13.1</version>
 			</plugin>
         </plugins>
     </build>
