JRADEV-16387: different way of showing required fields that will match the markup used for filling values

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -84,3 +84,13 @@ cpji.copy.comments=Copy Comments
 cpji.you.dont.have.create.issue.permission=You don''t have the create issue permission for this JIRA project!
 cpji.you.dont.have.create.issue.permission.for.any.project=You can''t clone issue. You don''t have the create issue permission for any JIRA project.
 cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
+cpji.confirm.new.values=Confirm new values
+cpji.cant.copy.issue=Can''t copy the issue, because of the following fields.
+cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the following fields.
+cpji.all.system.fields.retained=All system field values will be retained
+cpji.system.fields=System fields
+cpji.some.fields.are.missing=Some fields that are required for the destination project are missing.
+cpji.please.set.values=Please set values for those fields.
+cpji.all.custom.fields.retained=All custom field values will be retained
+cpji.copy.issue=Copy Issue
+cpji.custom.fields=Custom fields
