JRADEV-16387: testing that missing required fields are reported correctly

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -93,3 +93,4 @@ cpji.please.set.values=Please set values for those fields.
 cpji.all.custom.fields.retained=All custom field values will be retained
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
+cpji.error.occurred=An error occurred.
