JRADEV-16334: simplified Copy details page, extracted stepped sidebar

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -61,13 +61,11 @@ cpji.please.contact.admin=There was a problem connecting to one of the servers. 
 
 cpji.select.new.issue.type=Select a new issue type
 cpji.select.project=Select project
-cpji.select.issue.type=Select Issue Type
+cpji.details=Copy details
 cpji.confirmation=Confirmation
 cpji.issue.type=Issue Type
 cpji.subtask=Sub-Task
 cpji.remote.user=Remote user
-cpji.user.name=User name
-cpji.user.full.name=User Full Name
 cpji.advanced=Advanced
 cpji.copy.attachments=Copy Attachments
 cpji.attachments.will.be.copied=Attachments will be copied
@@ -80,6 +78,7 @@ cpji.not.permitted.to.create.comments=You don''t have the add comments permissio
 cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the destination JIRA
 cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
+cpji.creates.issue.link.between.issues=Creates issue link between original and copied issue
 cpji.copy.comments=Copy Comments
 cpji.you.dont.have.create.issue.permission.for.any.project=You can''t clone issue. You don''t have the create issue permission for any JIRA project.
 cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
@@ -94,3 +93,6 @@ cpji.all.custom.fields.retained=All custom field values will be retained
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
 cpji.error.occurred=An error occurred.
+cpji.copy.successful=Copy successful
+cpji.has.been.copied.to={0} has been copied to {1}
+cpji.there.were.problems.during.creation=There were some problems during issue creation
