JRADEV-16334: reformatted copydetails, fixed CopyIssueToInstance pageobject

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -61,7 +61,8 @@ cpji.please.contact.admin=There was a problem connecting to one of the servers. 
 
 cpji.select.new.issue.type=Select a new issue type
 cpji.select.project=Select project
-cpji.details=Copy details
+cpji.copy.details=Copy details
+cpji.details=Details
 cpji.confirmation=Confirmation
 cpji.issue.type=Issue Type
 cpji.subtask=Sub-Task
