JRADEV-16290: better UI for the error page

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -96,3 +96,4 @@ cpji.error.occurred=An error occurred.
 cpji.copy.successful=Copy successful
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
+cpji.there.was.an.error=Error copying issue
