--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -93,7 +93,7 @@ cpji.please.set.values=Please set values for those fields.
 cpji.all.custom.fields.retained=All custom field values will be retained
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
-cpji.error.occurred=An error occurred.
+cpji.error.occurred=Can not copy <a href="{0}">{1}</a> because an error occurred
 cpji.copy.successful=Copy successful
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
