--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -81,10 +81,10 @@ cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
 cpji.creates.issue.link.between.issues=Creates issue link between original and copied issue
 cpji.copy.comments=Copy Comments
-cpji.you.dont.have.create.issue.permission.for.any.project=You can''t clone issue. You don''t have the create issue permission for any JIRA project.
+cpji.you.dont.have.create.issue.permission.for.any.project=You cannot clone issue. You don''t have the create issue permission for any JIRA project.
 cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
 cpji.confirm.new.values=Confirm new values
-cpji.cant.copy.issue=Can''t copy the issue, because of the following fields.
+cpji.cant.copy.issue=Cannot copy the issue, because of the following fields.
 cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the following fields.
 cpji.all.system.fields.retained=All system field values will be retained
 cpji.system.fields=System fields
@@ -93,7 +93,7 @@ cpji.please.set.values=Please set values for those fields.
 cpji.all.custom.fields.retained=All custom field values will be retained
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
-cpji.error.occurred=Can not copy <a href="{0}">{1}</a> because an error occurred
+cpji.error.occurred=Cannot copy <a href="{0}">{1}</a> because an error occurred
 cpji.copy.successful=Copy successful
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
