JRADEV-16334: switch JIRA 6.0 to breakit branch, disable PDL darkfeature and see what will blow up....

--- a/pom.xml
+++ b/pom.xml
@@ -346,7 +346,7 @@
 		<profile>
 			<id>jira-6</id>
 			<properties>
-				<jira.version>6.0-SNAPSHOT</jira.version>
+				<jira.version>6.0-breakit-SNAPSHOT</jira.version>
 				<testkit.version>6.0.5</testkit.version>
 			</properties>
 		</profile>
