JRADEV-18017: using Sub-Task Issue Types and Standard Issue Types headers in Issue Type single select

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -65,7 +65,8 @@ cpji.copy.details=Copy details
 cpji.details=Details
 cpji.confirmation=Confirmation
 cpji.issue.type=Issue Type
-cpji.subtask=Sub-Task
+cpji.standard.issue.types=Standard Issue Types
+cpji.subtask.issue.types=Sub-Task Issue Types
 cpji.remote.user=Remote user
 cpji.advanced=Advanced
 cpji.copy.attachments=Copy Attachments
