JRADEV-18090: Message and title cleanups from bug report

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -86,7 +86,7 @@ cpji.copy.comments=Copy Comments
 cpji.you.dont.have.create.issue.permission.for.any.project=You cannot clone issue. You don''t have the create issue permission for any JIRA project.
 cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
 cpji.confirm.new.values=Confirm new values
-cpji.cant.copy.issue=Cannot copy the issue, because of the following fields.
+cpji.cant.copy.issue=Cannot copy the issue because of the errors below
 cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the following fields.
 cpji.all.system.fields.retained=All system field values will be retained
 cpji.system.fields=System fields
