JRADEV-18088: user will be notified if issue includes a custom field that's no supported

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -24,6 +24,7 @@ cpji.field.validation.field.mandatory.permission.missing=This field is mandatory
 cpji.field.validation.field.mandatory.permission.missing.using.default=This field is mandatory and you don''t have the required permission to set the value for this field in the target project. The target project will use a default value for this field.
 cpji.field.validation.field.mandatory.but.not.supplied=This field is required in the target project and does not exist in the local project.
 cpji.field.validation.field.mandatory.but.not.supplied.using.default=This field is required in the target project and does not exist in the local project. The target project will use a default value for this field.
+cpji.field.validation.field.type.not.supplied=This field uses an unsupported custom field type, it will not be copied.
 cpji.field.names.watchers=Watchers
 cpji.field.names.votes=Voters
 cpji.error.no.permission=You don''t have the permission for this operation.
