JRADEV-17227: Use Cloners issue link type and make remote links work even if it is missing.

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -76,7 +76,7 @@ cpji.attachments.are.disabled=Destination JIRA has attachments disabled
 cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
 cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the destination JIRA and cannot be copied.
 cpji.some.attachments.are.too.big=Some of attachments exceed maximum attachment size in the destination JIRA and cannot be copied. Other attachments will be copied
-cpji.attachment.file.not.found=File for attachment ''{0}'' is missing. This attachment cannot be copied.
+cpji.attachment.file.not.found=File for attachment ''{0}'' is missing and was not copied.
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the destination JIRA
 cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the destination JIRA
 cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the destination JIRA
