JRADEV-16370: looking after poor, orphaned not i18-ed phrases

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -44,7 +44,7 @@ cpji.config.user.group=Saved user groups restriction.
 cpji.config.user.group.remove=Removed user groups restriction.
 cpji.select.destination.project=Select destination project
 
-
+cpji.you.have.to.authorize.this.operation=You have to <a href="{0}">authorize</a> this operation.
 cpji.errors.authentication.failed=Authentication failed. If using Trusted Apps, do you have a user with the same user name in the remote JIRA instance?
 cpji.errors.oauth.token.invalid=OAuth token invalid.
 cpji.errors.failed.to.retrieve.issue.fields=Failed to retrieve the list of issue fields from the remote JIRA instance.
@@ -69,9 +69,7 @@ cpji.issue.type=Issue Type
 cpji.standard.issue.types=Standard Issue Types
 cpji.subtask.issue.types=Sub-Task Issue Types
 cpji.remote.user=Remote user
-cpji.advanced=Advanced
 cpji.copy.attachments=Copy Attachments
-cpji.attachments.will.be.copied=Attachments will be copied
 cpji.attachments.are.disabled=Destination JIRA has attachments disabled
 cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
 cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the destination JIRA and cannot be copied.
@@ -98,6 +96,7 @@ cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
 cpji.error.occurred=Cannot copy <a href="{0}">{1}</a> because an error occurred
 cpji.copy.successful=Copy successful
+cpji.back.to.the.issue=Back to the Issue
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
 cpji.there.was.an.error=Error copying issue
