JRADEV-18073: returning error when remote issue link cannot be converter to local one

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -100,3 +100,4 @@ cpji.back.to.the.issue=Back to the Issue
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
 cpji.there.was.an.error=Error copying issue
+cpji.link.type.doesnt.exist.link.wasnt.copied=The link type with name ''{0}'' does not exist. Link between {1} and {2} was not copied
