--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -86,12 +86,11 @@ cpji.you.dont.have.create.issue.permission.for.any.project=You cannot clone issu
 cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
 cpji.confirm.new.values=Confirm new values
 cpji.cant.copy.issue=Cannot copy the issue because of the errors below
-cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the following fields.
+cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the fields bellow.
 cpji.all.system.fields.retained=All system field values will be retained
 cpji.system.fields=System fields
 cpji.some.fields.are.missing=Some fields that are required for the destination project are missing.
-cpji.please.set.values=Please set values for those fields.
-cpji.all.custom.fields.retained=All custom field values will be retained
+cpji.some.values.cannot.be.copied=Some issue field values cannot be copied to the destination project.
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
 cpji.error.occurred=Cannot copy <a href="{0}">{1}</a> because an error occurred
@@ -101,3 +100,6 @@ cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
 cpji.there.was.an.error=Error copying issue
 cpji.link.type.doesnt.exist.link.wasnt.copied=The link type with name ''{0}'' does not exist. Link between {1} and {2} was not copied
+cpji.source.issue.fields=Issue fields
+cpji.destination.issue.fields=Destination Issue fields
+cpji.no.missing.required.fields=There are no missing required fields for the destination issue.
