--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -87,7 +87,7 @@ cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disable
 cpji.confirm.new.values=Confirm new values
 cpji.cant.copy.issue=Cannot copy the issue because of the errors below.
 cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the fields below.
-cpji.all.system.fields.retained=All system field values will be retained
+cpji.issue.fields.retained=All issue field values will be retained.
 cpji.system.fields=System fields
 cpji.some.fields.are.missing=Some fields that are required for the destination project are missing.
 cpji.some.values.cannot.be.copied=Some issue field values cannot be copied to the destination project.
