JRADEV-18359: using UserCompatibilityHelper

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -119,6 +119,10 @@
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-view-issue-plugin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.atlassian.usercompatibility</groupId>
+            <artifactId>usercompatibility-jira</artifactId>
+        </dependency>
 	</dependencies>
 
     <build>
