--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -18,6 +18,7 @@ cpji.field.validation.ok=This field will be copied across and the field value(s)
 cpji.field.validation.field.not.mapped=This field does not exist in the target project and cannot be copied.
 cpji.field.validation.value.not.mapped=Field value(s) for this field could not be mapped to valid values in the target project.
 cpji.field.valiation.permission.missing=The value cannot be copied, because you don''t have the permission for this field.
+cpji.field.valiation.permission.missing.using.default=The value cannot be copied, because you don''t have the permission for this field. The target project will use a default value for this field.
 cpji.field.validation.field.mandatory.value.not.mapped=This field is mandatory in the target project, but field value(s) for this field could not be mapped to valid values in the target project.
 cpji.field.validation.field.mandatory.value.not.mapped.using.default=This field is mandatory in the target project, but field value(s) for this field could not be mapped to valid values in the target project. The target project will use a default value for this field.
 cpji.field.validation.field.mandatory.permission.missing=This field is mandatory and you don''t have the required permission to set the value for this field in the target project.
