--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -16,7 +16,7 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cpji-jira-plugin</artifactId>
 			<version>${project.version}</version>
-			<scope>test</scope>
+            <scope>compile</scope>
 		</dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
