JRADEV-18244: better warning message

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -100,7 +100,7 @@ cpji.back.to.the.issue=Back to the Issue
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
 cpji.there.was.an.error=Error copying issue
-cpji.link.type.doesnt.exist.link.wasnt.copied=The link with name ''{0}'' does not exist. Link between {1} and {2} was not copied
+cpji.link.type.doesnt.exist.link.wasnt.copied=Cannot link {1} and {2} on the destination server because the link with name ''{0}'' does not exist there.
 cpji.source.issue.fields=Issue fields
 cpji.destination.issue.fields=Destination Issue fields
 cpji.no.missing.required.fields=There are no missing required fields for the destination issue.
