--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -128,6 +128,12 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.9.2</artifactId>
+            <version>1.9.1</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.atlassian.util.concurrent</groupId>
 			<artifactId>atlassian-util-concurrent</artifactId>
