--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -67,31 +67,33 @@ cpji.copy.details=Copy details
 cpji.details=Details
 cpji.confirmation=Confirmation
 cpji.issue.type=Issue Type
+cpji.provide.details.for.destination.issue=Provide details for target issue field values
 cpji.standard.issue.types=Standard Issue Types
 cpji.subtask.issue.types=Sub-Task Issue Types
 cpji.remote.user=Remote user
 cpji.copy.attachments=Copy Attachments
-cpji.attachments.are.disabled=Destination JIRA has attachments disabled
+cpji.attachments.are.disabled=Target JIRA has attachments disabled
 cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
-cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the destination JIRA and cannot be copied.
-cpji.some.attachments.are.too.big=Some of attachments exceed maximum attachment size in the destination JIRA and cannot be copied. Other attachments will be copied
+cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the target JIRA and cannot be copied.
+cpji.some.attachments.are.too.big=Some of attachments exceed maximum attachment size in the target JIRA and cannot be copied. Other attachments will be copied
 cpji.attachment.file.not.found=File for attachment ''{0}'' is missing and was not copied.
-cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the destination JIRA
-cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the destination JIRA
-cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the destination JIRA
+cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the target JIRA
+cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the target JIRA
+cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the target JIRA
 cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
-cpji.creates.issue.link.between.issues=Creates issue link between original and copied issue
+cpji.creates.issue.link.between.issues=Creates issue link between source and copied issue
 cpji.copy.comments=Copy Comments
 cpji.you.dont.have.create.issue.permission.for.any.project=You cannot clone issue. You don''t have the create issue permission for any JIRA project.
-cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
-cpji.confirm.new.values=Confirm new values
+cpji.remote.issue.linking.is.disabled=Target JIRA has issue linking disabled.
+cpji.confirm.clone=Confirm clone
 cpji.cant.copy.issue=Cannot copy the issue because of the errors below.
-cpji.this.issue.can.be.copied=The issue can be copied, but there are warnings related to the values of the fields below.
+cpji.this.issue.can.be.copied=The issue can be copied, but there are problems with some fields. Please check the list below
+cpji.please.confirm.clone=Please confirm the clone operation by clicking "Copy Issue" button below
 cpji.issue.fields.retained=All issue field values will be retained.
 cpji.system.fields=System fields
-cpji.some.fields.are.missing=Some fields that are required for the destination project are missing.
-cpji.some.values.cannot.be.copied=Some issue field values cannot be copied to the destination project.
+cpji.some.fields.are.missing=Some fields that are required for the target project are missing.
+cpji.some.values.cannot.be.copied=Some issue field values cannot be copied to the target project.
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
 cpji.error.occurred=Cannot copy <a href="{0}">{1}</a> because an error occurred
@@ -100,7 +102,7 @@ cpji.back.to.the.issue=Back to the Issue
 cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
 cpji.there.was.an.error=Error copying issue
-cpji.link.type.doesnt.exist.link.wasnt.copied=Cannot link {1} and {2} on the destination server because the link with name ''{0}'' does not exist there.
+cpji.link.type.doesnt.exist.link.wasnt.copied=Cannot link {1} and {2} on the target server because the link with name ''{0}'' does not exist there.
 cpji.source.issue.fields=Issue fields
-cpji.destination.issue.fields=Destination Issue fields
-cpji.no.missing.required.fields=There are no missing required fields for the destination issue.
+cpji.destination.issue.fields=Target Issue fields
+cpji.no.missing.required.fields=There are no missing required fields for the target issue.
