JRADEV-18115: target JIRA => target project

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -77,9 +77,9 @@ cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
 cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the target JIRA and cannot be copied.
 cpji.some.attachments.are.too.big=Some of attachments exceed maximum attachment size in the target JIRA and cannot be copied. Other attachments will be copied
 cpji.attachment.file.not.found=File for attachment ''{0}'' is missing and was not copied.
-cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the target JIRA
-cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the target JIRA
-cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the target JIRA
+cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the target project
+cpji.not.permitted.to.create.comments=You don''t have the add comments permission in the target project
+cpji.not.permitted.to.link.issues=You don''t have the link issues permission in the target project
 cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
 cpji.creates.issue.link.between.issues=Creates issue link between source and copied issue
