JRADEV-18115: target JIRA => target project

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -43,7 +43,7 @@ cpji.config.default.empty.value=Deleted default value for field ''{0}''
 cpji.config.user.mapping=Saved user mapping configuration.
 cpji.config.user.group=Saved user groups restriction.
 cpji.config.user.group.remove=Removed user groups restriction.
-cpji.select.destination.project=Select destination project
+cpji.select.destination.project=Select target project
 
 cpji.you.have.to.authorize.this.operation=You have to <a href="{0}">authorize</a> this operation.
 cpji.errors.authentication.failed=Authentication failed. If using Trusted Apps, do you have a user with the same user name in the remote JIRA instance?
