JRADEV-18289: s/Issue fields/Source Issue fields/ and removed some unused messages

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -7,7 +7,6 @@ cpji.admin.there.were.problems=There were some problems when saving the configur
 
 cpji.admin.fields.groups.name=Allowed Groups
 cpji.admin.fields.group.description=<strong>Note:</strong> When list is empty all logged-in users can copy issues to another JIRA project.
-cpji.admin.fields.group.everyone=everyone
 cpji.admin.fields.usermapping.name=User Mapping
 cpji.admin.fields.usermapping.description=Users from the remote JIRA instance are mapped by using the selected mapping type. This user mapping is used when copying field values of the assignee, comment, reporter, voter and watcher field.
 
@@ -31,16 +30,12 @@ cpji.field.names.votes=Voters
 cpji.error.no.permission=You don''t have the permission for this operation.
 cpji.project.role=Project Role {0}
 cpji.group=Group {0}
-usermapping.username=By user name
-usermapping.email=By email
-usermapping.email.and.username=By email AND user name
 cpji.remote.link.reciprocal=Both directions
 cpji.remote.link.incoming=From copy to original issue
 cpji.remote.link.outgoing=From original to copy
 cpji.remote.link.nolink=None
 cpji.config.default.value=Saved default value for field ''{0}''
 cpji.config.default.empty.value=Deleted default value for field ''{0}''
-cpji.config.user.mapping=Saved user mapping configuration.
 cpji.config.user.group=Saved user groups restriction.
 cpji.config.user.group.remove=Removed user groups restriction.
 cpji.select.destination.project=Select target project
@@ -57,7 +52,6 @@ cpji.errors.issue.created.with.errors=Created issue ''{0}'', but unfortunately t
 cpji.you.need.to.log.in=You need to log in and approve to use following servers:
 cpji.authentication.failed=Authentication failed with:
 cpji.communication.failed=Communication failed with:
-cpji.remote.copying.not.installed=Remote copying of issues is not installed on:
 cpji.unsupported.version=Please update Remote Copy Plugin on:
 cpji.please.contact.admin=There was a problem connecting to one of the servers. Please contact your administrator.
 
@@ -90,7 +84,6 @@ cpji.confirm.clone=Confirm clone
 cpji.cant.copy.issue=Cannot copy the issue because of the errors below.
 cpji.this.issue.can.be.copied=The issue can be copied, but there are problems with some fields. Please check the list below
 cpji.please.confirm.clone=Please confirm the clone operation by clicking "Copy Issue" button below
-cpji.issue.fields.retained=All issue field values will be retained.
 cpji.system.fields=System fields
 cpji.some.fields.are.missing=Some fields that are required for the target project are missing.
 cpji.some.values.cannot.be.copied=Some issue field values cannot be copied to the target project.
@@ -103,6 +96,6 @@ cpji.has.been.copied.to={0} has been copied to {1}
 cpji.there.were.problems.during.creation=There were some problems during issue creation
 cpji.there.was.an.error=Error copying issue
 cpji.link.type.doesnt.exist.link.wasnt.copied=Cannot link {1} and {2} on the target server because the link with name ''{0}'' does not exist there.
-cpji.source.issue.fields=Issue fields
+cpji.source.issue.fields=Source Issue fields
 cpji.destination.issue.fields=Target Issue fields
 cpji.no.missing.required.fields=There are no missing required fields for the target issue.
