JRADEV-18289: s/Confirm clone/Confirm operation/

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -80,7 +80,7 @@ cpji.creates.issue.link.between.issues=Creates issue link between source and cop
 cpji.copy.comments=Copy Comments
 cpji.you.dont.have.create.issue.permission.for.any.project=You cannot clone issue. You don''t have the create issue permission for any JIRA project.
 cpji.remote.issue.linking.is.disabled=Target JIRA has issue linking disabled.
-cpji.confirm.clone=Confirm clone
+cpji.confirm.clone=Confirm operation
 cpji.cant.copy.issue=Cannot copy the issue because of the errors below.
 cpji.this.issue.can.be.copied=The issue can be copied, but there are problems with some fields. Please check the list below
 cpji.please.confirm.clone=Please confirm the clone operation by clicking "Copy Issue" button below
