JRADEV-18301: changed the name used in the plugin to JIRA to JIRA Issue Copy

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>cpji-jira-plugin</artifactId>
-    <name>Remote copying of issues (cpji-jira-plugin)</name>
+    <name>JIRA to JIRA Issue Copy</name>
     <description>Plugin that copies issues from one JIRA instance to another</description>
     <packaging>atlassian-plugin</packaging>
 
