JRADEV-18299: hover information text

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -89,6 +89,7 @@ cpji.please.confirm.clone=Please confirm the clone operation by clicking "Copy I
 cpji.system.fields=System fields
 cpji.some.fields.are.missing=Some fields that are required for the target project are missing.
 cpji.some.values.cannot.be.copied=Some issue field values cannot be copied to the target project.
+cpji.hover.over.to.see.which.values.wont.be.copied=To see which values will not be copied hover over information icon {0}
 cpji.copy.issue=Copy Issue
 cpji.custom.fields=Custom fields
 cpji.error.occurred=Cannot copy <a href="{0}">{1}</a> because an error occurred
