--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -25,7 +25,7 @@ cpji.field.validation.field.mandatory.permission.missing.using.default=This fiel
 cpji.field.validation.field.mandatory.but.not.supplied=This field is required in the target project and does not exist in the local project.
 cpji.field.validation.field.mandatory.but.not.supplied.using.default=This field is required in the target project and does not exist in the local project. The target project will use a default value for this field.
 cpji.field.validation.field.type.not.supplied=This field uses an unsupported custom field type, it will not be copied.
-cpji.field.validation.not.mapped.multi=Values which could not be mapped:
+cpji.field.validation.following.values.cannot.be.mapped=Following values cannot be copied to the target project:
 cpji.field.names.watchers=Watchers
 cpji.field.names.votes=Voters
 cpji.error.no.permission=You don''t have the permission for this operation.
