JRADEV-16429: showing Recently Used projects group, keeping track of previous projects selected by the user (per user setting)

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -100,3 +100,6 @@ cpji.link.type.doesnt.exist.link.wasnt.copied=Cannot link {1} and {2} on the tar
 cpji.source.issue.fields=Source Issue fields
 cpji.destination.issue.fields=Target Issue fields
 cpji.no.missing.required.fields=There are no missing required fields for the target issue.
+
+cpji.recently.used=Recently Used
+cpji.continue.typeing.to.see.more=More options available. Continue typing to refine further.
